--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "android": "npx expo run:android",
     "test": "jest --watchAll",
     "lint": "eslint \"**/*.{js,jsx,ts,tsx}\" && prettier -c \"**/*.{js,jsx,ts,tsx,json}\"",
-    "format": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix && prettier \"**/*.{js,jsx,ts,tsx,json}\" --write",
-    "ios": "expo run:ios"
+    "format": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix && prettier \"**/*.{js,jsx,ts,tsx,json}\" --write"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
@@ -28,13 +27,13 @@
     "expo-device": "~5.9.4",
     "expo-image": "~1.10.6",
     "expo-image-picker": "~14.7.1",
+    "expo-insights": "~0.6.1",
     "expo-linking": "~6.2.2",
     "expo-notifications": "~0.27.7",
     "expo-router": "~3.4.10",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
     "expo-updates": "~0.24.12",
-    "firebase": "^10.5.2",
     "formik": "^2.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
