--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,7 @@
 		"baseUrl": ".",
 		"paths": {
 			"@/*": ["./src/*"],
-			"@/assets/*": ["./assets/*"],
-			"@firebase/auth": ["./node_modules/@firebase/auth/dist/index.rn.d.ts"]
+			"@/assets/*": ["./assets/*"]
 		}
 	},
 	"include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"],
