added signin/signup page

--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "react-native-unistyles": "^2.1.1",
     "react-native-url-polyfill": "^2.0.0",
     "yup": "^1.4.0",
-    "zustand": "^4.5.4"
+    "zustand": "^4.5.4",
+    "expo-linear-gradient": "~12.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
