--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/native": "^6.1.7",
     "@sentry/react-native": "~5.20.0",
+    "@shopify/flash-list": "^1.6.4",
     "@supabase/supabase-js": "^2.44.1",
     "dotenv": "^16.4.5",
     "expo": "~50.0.17",
@@ -31,6 +32,7 @@
     "expo-image": "~1.10.6",
     "expo-image-picker": "~14.7.1",
     "expo-insights": "~0.6.1",
+    "expo-linear-gradient": "~12.7.2",
     "expo-linking": "~6.2.2",
     "expo-notifications": "~0.27.7",
     "expo-router": "~3.4.10",
@@ -45,14 +47,14 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-mmkv": "^2.12.2",
     "react-native-reanimated": "~3.6.2",
+    "react-native-ruler-picker": "^0.2.2",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-size-matters": "^0.4.2",
     "react-native-unistyles": "^2.1.1",
     "react-native-url-polyfill": "^2.0.0",
     "yup": "^1.4.0",
-    "zustand": "^4.5.4",
-    "expo-linear-gradient": "~12.7.2"
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
