--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	},
 	"dependencies": {
 		"@expo/vector-icons": "^14.0.0",
+		"@gorhom/bottom-sheet": "^4.6.3",
 		"@react-native-async-storage/async-storage": "1.21.0",
 		"@react-navigation/drawer": "^6.6.15",
 		"@react-navigation/native": "^6.1.7",
