--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "kokutalk-anonymous",
+  "name": "kokutalk",
   "version": "1.0.0",
   "main": "expo-router/entry",
+  "author": {"email": "omkahub@gmail.com", "name": "Mohamedo Desu"},
+  "description": "KokuTalk is a confession app where users can share their secrets and confessions anonymously. The app utilizes the following technologies and libraries: React Native, Expo, Supabase",
+
   "scripts": {
     "start": "expo start",
     "build:android": "npx eas-cli build -p android --profile preview",
@@ -24,17 +27,15 @@
     "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
     "expo": "~50.0.17",
-    "expo-application": "~5.8.4",
     "expo-blur": "~12.9.2",
     "expo-constants": "~15.4.5",
-    "expo-crypto": "~12.8.1",
-    "expo-device": "~5.9.4",
     "expo-image-picker": "~14.7.1",
     "expo-insights": "~0.6.1",
     "expo-linear-gradient": "~12.7.2",
     "expo-linking": "~6.2.2",
     "expo-notifications": "~0.27.7",
     "expo-router": "~3.4.10",
+    "expo-secure-store": "~12.8.1",
     "expo-system-ui": "~2.9.3",
     "expo-updates": "~0.24.12",
     "formik": "^2.4.6",
@@ -43,7 +44,6 @@
     "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-mmkv": "^2.12.2",
     "react-native-reanimated": "~3.6.2",
     "react-native-ruler-picker": "^0.2.2",
     "react-native-safe-area-context": "^4.8.2",
