--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-community/netinfo": "^11.3.2",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.7",
     "@sentry/react-native": "~5.20.0",
     "@shopify/flash-list": "1.6.3",
-    "@supabase/supabase-js": "^2.44.2",
     "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
     "expo": "~50.0.17",
@@ -41,6 +41,7 @@
     "expo-secure-store": "~12.8.1",
     "expo-system-ui": "~2.9.4",
     "expo-updates": "~0.24.13",
+    "firebase": "^10.12.3",
     "formik": "^2.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -52,6 +53,7 @@
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-size-matters": "^0.4.2",
+    "react-native-toast-notifications": "^3.4.0",
     "react-native-unistyles": "^2.1.1",
     "react-native-url-polyfill": "^2.0.0",
     "yup": "^1.4.0",
