debugging the eas update

--- a/eas.json
+++ b/eas.json
@@ -10,10 +10,12 @@
 		},
 		"preview": {
 			"distribution": "internal",
-			"channel": "preview"
+			"channel": "preview",
+			"autoIncrement": true
 		},
 		"production": {
-			"channel": "production"
+			"channel": "production",
+			"autoIncrement": true
 		}
 	},
 	"submit": {
