--- a/eas.json
+++ b/eas.json
@@ -1,6 +1,7 @@
 {
 	"cli": {
-		"version": ">= 8.0.0"
+		"version": ">= 8.0.0",
+		"appVersionSource": "remote"
 	},
 	"build": {
 		"development": {
@@ -14,8 +15,7 @@
 			"autoIncrement": true
 		},
 		"production": {
-			"channel": "production",
-			"autoIncrement": true
+			"channel": "production"
 		}
 	},
 	"submit": {
