--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"react-native-ruler-picker": "^0.2.2",
 		"react-native-safe-area-context": "^4.8.2",
 		"react-native-screens": "~3.29.0",
+		"react-native-select-dropdown": "^4.0.1",
 		"react-native-size-matters": "^0.4.2",
 		"react-native-toast-notifications": "^3.4.0",
 		"react-native-unistyles": "^2.1.1",
