--- a/eas.json
+++ b/eas.json
@@ -1,24 +1,23 @@
 {
-  "cli": {
-    "version": ">= 9.1.0",
-    "appVersionSource": "remote"
-  },
-  "build": {
-    "development": {
-      "developmentClient": true,
-      "distribution": "internal",
-      "channel": "development"
-    },
-    "preview": {
-      "distribution": "internal",
-      "channel": "preview",
-      "autoIncrement": true
-    },
-    "production": {
-      "channel": "production"
-    }
-  },
-  "submit": {
-    "production": {}
-  }
+	"cli": {
+		"version": ">= 9.1.0"
+	},
+	"build": {
+		"development": {
+			"developmentClient": true,
+			"distribution": "internal",
+			"channel": "development"
+		},
+		"preview": {
+			"distribution": "internal",
+			"channel": "preview",
+			"autoIncrement": true
+		},
+		"production": {
+			"channel": "production"
+		}
+	},
+	"submit": {
+		"production": {}
+	}
 }
