--- a/package.json
+++ b/package.json
@@ -21,37 +21,37 @@
     "ios": "expo run:ios"
   },
   "dependencies": {
+    "@expo/fingerprint": "^0.10.0",
     "@expo/vector-icons": "^14.0.0",
-    "@react-native-async-storage/async-storage": "1.21.0",
-    "@react-native-community/netinfo": "11.1.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/netinfo": "11.3.1",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.7",
-    "@sentry/react-native": "~5.20.0",
-    "@shopify/flash-list": "1.6.3",
+    "@sentry/react-native": "~5.22.0",
+    "@shopify/flash-list": "1.6.4",
     "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
-    "expo": "~50.0.17",
-    "expo-blur": "~12.9.2",
-    "expo-constants": "~15.4.6",
-    "expo-insights": "~0.6.1",
-    "expo-linear-gradient": "~12.7.2",
-    "expo-linking": "~6.2.2",
-    "expo-notifications": "~0.27.8",
-    "expo-router": "~3.4.10",
-    "expo-secure-store": "~12.8.1",
-    "expo-system-ui": "~2.9.4",
-    "expo-updates": "~0.24.13",
+    "expo": "^51.0.20",
+    "expo-blur": "~13.0.2",
+    "expo-constants": "~16.0.2",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-linking": "~6.3.1",
+    "expo-notifications": "~0.28.9",
+    "expo-router": "~3.5.18",
+    "expo-secure-store": "~13.0.2",
+    "expo-system-ui": "~3.0.7",
+    "expo-updates": "~0.25.19",
     "firebase": "^10.12.3",
     "formik": "^2.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native": "0.74.3",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-reanimated": "~3.6.2",
+    "react-native-reanimated": "~3.10.1",
     "react-native-ruler-picker": "^0.2.2",
-    "react-native-safe-area-context": "^4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-size-matters": "^0.4.2",
     "react-native-toast-notifications": "^3.4.0",
     "react-native-unistyles": "^2.1.1",
@@ -73,19 +73,6 @@
   },
   "eslintConfig": {
     "extends": "universe/native"
-  },
-  "resolutions": {
-    "expo-modules-core": "~1.11.0"
-  },
-  "overrides": {
-    "expo-modules-core": "~1.11.0"
-  },
-  "expo": {
-    "install": {
-      "exclude": [
-        "react-native-safe-area-context"
-      ]
-    }
   },
   "private": true
 }
