--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "ios": "expo run:ios"
   },
   "dependencies": {
-    "@expo/fingerprint": "^0.10.0",
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/netinfo": "11.3.1",
@@ -36,11 +35,12 @@
     "expo-constants": "~16.0.2",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
-    "expo-notifications": "~0.28.9",
+    "expo-notifications": "~0.28.10",
     "expo-router": "~3.5.18",
     "expo-secure-store": "~13.0.2",
+    "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
-    "expo-updates": "~0.25.19",
+    "expo-updates": "~0.25.20",
     "firebase": "^10.12.3",
     "formik": "^2.4.6",
     "react": "18.2.0",
