--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@shopify/flash-list": "1.6.4",
     "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
-    "expo": "^51.0.20",
+    "expo": "~51.0.21",
     "expo-blur": "~13.0.2",
     "expo-constants": "~16.0.2",
     "expo-linear-gradient": "~13.0.2",
@@ -48,9 +48,10 @@
     "react-native": "0.74.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.10.1",
     "react-native-ruler-picker": "^0.2.2",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-size-matters": "^0.4.2",
     "react-native-toast-notifications": "^3.4.0",
