--- a/eas.json
+++ b/eas.json
@@ -10,7 +10,10 @@
 		},
 		"preview": {
 			"distribution": "internal",
-			"channel": "preview"
+			"channel": "preview",
+			"android": {
+				"buildType": "apk"
+			}
 		},
 		"production": {
 			"channel": "production"
